--- a/portfolio.html
+++ b/portfolio.html
@@ -65,6 +65,9 @@
                 <ul class="list product-list">
                     <li class="item">
                         <img src="./images/portfolio/product1.jpg" alt="Ноутбук с открытым веб-сайтом" width="370">
+                        <p class="description">Технокряк это современная площадка распространения коронавируса. Компании
+                            используют эту
+                            платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         <div class="product">
                             <h2 class="subtitle">Технокряк</h2>
                             <p class="text">Веб-сайт</p>
@@ -72,6 +75,9 @@
                     </li>
                     <li class="item">
                         <img src="./images/portfolio/product2.jpg" alt="Постер с двумя баскетболистами" width="370">
+                        <p class="description">Технокряк это современная площадка распространения коронавируса. Компании
+                            используют эту
+                            платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         <div class="product">
                             <h2 class="subtitle">Постер New Orlean vs Golden Star</h2>
                             <p class="text">Дизайн</p>
@@ -79,6 +85,9 @@
                     </li>
                     <li class="item">
                         <img src="./images/portfolio/product3.jpg" alt="Логотип ресторана Сифуд" width="370">
+                        <p class="description">Технокряк это современная площадка распространения коронавируса. Компании
+                            используют эту
+                            платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         <div class="product">
                             <h2 class="subtitle">Ресторан Seafood</h2>
                             <p class="text">Приложение</p>
@@ -86,6 +95,9 @@
                     </li>
                     <li class="item">
                         <img src="./images/portfolio/product4.jpg" alt="Наушники" width="370">
+                        <p class="description">Технокряк это современная площадка распространения коронавируса. Компании
+                            используют эту
+                            платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         <div class="product">
                             <h2 class="subtitle">Проект Prime</h2>
                             <p class="text">Маркетинг</p>
@@ -93,6 +105,9 @@
                     </li>
                     <li class="item">
                         <img src="./images/portfolio/product5.jpg" alt="Две коробки" width="370">
+                        <p class="description">Технокряк это современная площадка распространения коронавируса. Компании
+                            используют эту
+                            платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         <div class="product">
                             <h2 class="subtitle">Проект Boxes</h2>
                             <p class="text">Приложение</p>
@@ -100,6 +115,9 @@
                     </li>
                     <li class="item">
                         <img src="./images/portfolio/product6.jpg" alt="Монитор с открытым веб-сайтом" width="370">
+                        <p class="description">Технокряк это современная площадка распространения коронавируса. Компании
+                            используют эту
+                            платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         <div class="product">
                             <h2 class="subtitle">Inspiration has no Borders</h2>
                             <p class="text">Веб-сайт</p>
@@ -107,6 +125,9 @@
                     </li>
                     <li class="item">
                         <img src="./images/portfolio/product7.jpg" alt="Страницы журнала" width="370">
+                        <p class="description">Технокряк это современная площадка распространения коронавируса. Компании
+                            используют эту
+                            платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         <div class="product">
                             <h2 class="subtitle">Издание Limited Edition</h2>
                             <p class="text">Дизайн</p>
@@ -114,6 +135,9 @@
                     </li>
                     <li class="item">
                         <img src="./images/portfolio/product8.jpg" alt="Этикетка" width="370">
+                        <p class="description">Технокряк это современная площадка распространения коронавируса. Компании
+                            используют эту
+                            платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         <div class="product">
                             <h2 class="subtitle">Проект LAB</h2>
                             <p class="text">Маркетинг</p>
@@ -122,6 +146,9 @@
                     <li class="item">
                         <img src="./images/portfolio/product9.jpg" alt="Создание приложения для бизнеса за ноутбуком"
                             width="370">
+                        <p class="description">Технокряк это современная площадка распространения коронавируса. Компании
+                            используют эту
+                            платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         <div class="product">
                             <h2 class="subtitle">Growing Business</h2>
                             <p class="text">Приложение</p>
