--- a/portfolio.html
+++ b/portfolio.html
@@ -64,95 +64,143 @@
 
                 <ul class="list product-list">
                     <li class="item">
-                        <img src="./images/portfolio/product1.jpg" alt="Ноутбук с открытым веб-сайтом" width="370">
-                        <p class="description">Технокряк это современная площадка распространения коронавируса. Компании
-                            используют эту
-                            платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                        <div class="product">
-                            <h2 class="subtitle">Технокряк</h2>
-                            <p class="text">Веб-сайт</p>
-                        </div>
+                        <a href="" class="item-link link">
+                            <div class="thumb">
+                                <img src="./images/portfolio/product1.jpg" alt="Ноутбук с открытым веб-сайтом"
+                                    width="370">
+                                <p class="description">Технокряк это современная площадка распространения коронавируса.
+                                    Компании
+                                    используют эту
+                                    платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="product">
+                                <h2 class="subtitle">Технокряк</h2>
+                                <p class="text">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/portfolio/product2.jpg" alt="Постер с двумя баскетболистами" width="370">
-                        <p class="description">Технокряк это современная площадка распространения коронавируса. Компании
-                            используют эту
-                            платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                        <div class="product">
-                            <h2 class="subtitle">Постер New Orlean vs Golden Star</h2>
-                            <p class="text">Дизайн</p>
-                        </div>
+                        <a href="" class="item-link link">
+                            <div class="thumb">
+                                <img src="./images/portfolio/product2.jpg" alt="Постер с двумя баскетболистами"
+                                    width="370">
+                                <p class="description">Технокряк это современная площадка распространения коронавируса.
+                                    Компании
+                                    используют эту
+                                    платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="product">
+                                <h2 class="subtitle">Постер New Orlean vs Golden Star</h2>
+                                <p class="text">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/portfolio/product3.jpg" alt="Логотип ресторана Сифуд" width="370">
-                        <p class="description">Технокряк это современная площадка распространения коронавируса. Компании
-                            используют эту
-                            платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                        <div class="product">
-                            <h2 class="subtitle">Ресторан Seafood</h2>
-                            <p class="text">Приложение</p>
-                        </div>
+                        <a href="" class="item-link link">
+                            <div class="thumb">
+                                <img src="./images/portfolio/product3.jpg" alt="Логотип ресторана Сифуд" width="370">
+                                <p class="description">Технокряк это современная площадка распространения коронавируса.
+                                    Компании
+                                    используют эту
+                                    платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="product">
+                                <h2 class="subtitle">Ресторан Seafood</h2>
+                                <p class="text">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/portfolio/product4.jpg" alt="Наушники" width="370">
-                        <p class="description">Технокряк это современная площадка распространения коронавируса. Компании
-                            используют эту
-                            платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                        <div class="product">
-                            <h2 class="subtitle">Проект Prime</h2>
-                            <p class="text">Маркетинг</p>
-                        </div>
+                        <a href="" class="item-link link">
+                            <div class="thumb">
+                                <img src="./images/portfolio/product4.jpg" alt="Наушники" width="370">
+                                <p class="description">Технокряк это современная площадка распространения коронавируса.
+                                    Компании
+                                    используют эту
+                                    платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="product">
+                                <h2 class="subtitle">Проект Prime</h2>
+                                <p class="text">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/portfolio/product5.jpg" alt="Две коробки" width="370">
-                        <p class="description">Технокряк это современная площадка распространения коронавируса. Компании
-                            используют эту
-                            платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                        <div class="product">
-                            <h2 class="subtitle">Проект Boxes</h2>
-                            <p class="text">Приложение</p>
-                        </div>
+                        <a href="" class="item-link link">
+                            <div class="thumb">
+                                <img src="./images/portfolio/product5.jpg" alt="Две коробки" width="370">
+                                <p class="description">Технокряк это современная площадка распространения коронавируса.
+                                    Компании
+                                    используют эту
+                                    платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="product">
+                                <h2 class="subtitle">Проект Boxes</h2>
+                                <p class="text">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/portfolio/product6.jpg" alt="Монитор с открытым веб-сайтом" width="370">
-                        <p class="description">Технокряк это современная площадка распространения коронавируса. Компании
-                            используют эту
-                            платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                        <div class="product">
-                            <h2 class="subtitle">Inspiration has no Borders</h2>
-                            <p class="text">Веб-сайт</p>
-                        </div>
+                        <a href="" class="item-link link">
+                            <div class="thumb">
+                                <img src="./images/portfolio/product6.jpg" alt="Монитор с открытым веб-сайтом"
+                                    width="370">
+                                <p class="description">Технокряк это современная площадка распространения коронавируса.
+                                    Компании
+                                    используют эту
+                                    платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="product">
+                                <h2 class="subtitle">Inspiration has no Borders</h2>
+                                <p class="text">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/portfolio/product7.jpg" alt="Страницы журнала" width="370">
-                        <p class="description">Технокряк это современная площадка распространения коронавируса. Компании
-                            используют эту
-                            платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                        <div class="product">
-                            <h2 class="subtitle">Издание Limited Edition</h2>
-                            <p class="text">Дизайн</p>
-                        </div>
+                        <a href="" class="item-link link">
+                            <div class="thumb">
+                                <img src="./images/portfolio/product7.jpg" alt="Страницы журнала" width="370">
+                                <p class="description">Технокряк это современная площадка распространения коронавируса.
+                                    Компании
+                                    используют эту
+                                    платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="product">
+                                <h2 class="subtitle">Издание Limited Edition</h2>
+                                <p class="text">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/portfolio/product8.jpg" alt="Этикетка" width="370">
-                        <p class="description">Технокряк это современная площадка распространения коронавируса. Компании
-                            используют эту
-                            платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                        <div class="product">
-                            <h2 class="subtitle">Проект LAB</h2>
-                            <p class="text">Маркетинг</p>
-                        </div>
+                        <a href="" class="item-link link">
+                            <div class="thumb">
+                                <img src="./images/portfolio/product8.jpg" alt="Этикетка" width="370">
+                                <p class="description">Технокряк это современная площадка распространения коронавируса.
+                                    Компании
+                                    используют эту
+                                    платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="product">
+                                <h2 class="subtitle">Проект LAB</h2>
+                                <p class="text">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/portfolio/product9.jpg" alt="Создание приложения для бизнеса за ноутбуком"
-                            width="370">
-                        <p class="description">Технокряк это современная площадка распространения коронавируса. Компании
-                            используют эту
-                            платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                        <div class="product">
-                            <h2 class="subtitle">Growing Business</h2>
-                            <p class="text">Приложение</p>
-                        </div>
+                        <a href="" class="item-link link">
+                            <div class="thumb">
+                                <img src="./images/portfolio/product9.jpg"
+                                    alt="Создание приложения для бизнеса за ноутбуком" width="370">
+                                <p class="description">Технокряк это современная площадка распространения коронавируса.
+                                    Компании
+                                    используют эту
+                                    платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="product">
+                                <h2 class="subtitle">Growing Business</h2>
+                                <p class="text">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                 </ul>
 
